k3s/azerbot/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azerbot
  namespace: bots
  labels:
    app: azerbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azerbot
  template:
    metadata:
      labels:
        app: azerbot
    spec:
      imagePullSecrets:
        - name: regcred-azerbot
      containers:
        - name: azerbot
          image: ghcr.io/enoal-fauchille-bolle/azerbot:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "100m"
