k3s/azerbot/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azerbot-svc
  namespace: bots
spec:
  selector:
    app: azerbot
  ports:
    - name: http
      port: 80
      targetPort: 3000
