k3s/azerbot/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azerbot-ingress
  namespace: bots
spec:
  rules:
    - host: azerbot.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: azerbot-svc
                port:
                  number: 80
